--- a/groupManage.html
+++ b/groupManage.html
@@ -184,8 +184,16 @@
 
                                 </ul>
                             </div>
-                            <div id="groupContentHtml" data-groupId = "">
+                            <div id="groupContent" data-groupId = "">
+                                <div class="groupDevControl">
+                                    <a href="javascript:;" class="gro update"><i class="fa fa-retweet"></i>更新分组设备</a>
+                                    <a href="javascript:;" class="gro groupForwardOpen"><i class="fa fa-rotate-right"></i>正向开启</a>
+                                    <a href="javascript:;" class="gro groupReverseOpen"><i class="fa fa-rotate-left"></i>反向开启</a>
+                                    <a href="javascript:;" class="gro groupClose"><i class="fa fa-minus-square-o"></i>关闭全部分组</a>
+                                </div>
+                                <div id="groupContentHtml" data-groupId = "">
 
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -289,13 +297,6 @@
 </script>
 
 <script id="queryDeviceTpl" type="text/template">
-    <div class="groupDevControl">
-        <a href="javascript:;" class="gro update"><i class="fa fa-retweet"></i>更新分组设备</a>
-        <a href="javascript:;" class="gro groupForwardOpen"><i class="fa fa-rotate-right"></i>正向开启</a>
-        <a href="javascript:;" class="gro groupReverseOpen"><i class="fa fa-rotate-left"></i>反向开启</a>
-        <a href="javascript:;" class="gro groupClose"><i class="fa fa-minus-square-o"></i>关闭全部分组</a>
-
-    </div>
     <div class="groupContent">
         <ul>
             <li class="devHeader">
